# can-cli-rs

./: Cargo.toml  README.md  logging-node.py
src/: client.rs  config.rs  dump.rs  errors.rs  generate.rs  get.rs  gitutils.rs  lib.rs  main.rs  scan.rs  server.rs  ssh.rs  status.rs  update.rs
src/appdata/: mod.rs
src/commands/: mod.rs
src/commands/config/: mod.rs  select.rs  show.rs
src/local/: mod.rs
