[package]
name = "canzero-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
# git2 = { version = "0.18.0", features = ["vendored-libgit2"]}
dirs = { version = "5.0.0" }
canzero-config = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-config.git" }
canzero-codegen = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-codegen.git" }
canzero-appdata = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-appdata.git" }
canzero-tcp = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-tcp.git" }
canzero-udp = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-udp.git" }
canzero-server = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-server.git" }
canzero-common = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-common.git" }
serde = {version = "1.0.193", features=["derive"]}
serde_yaml = "0.9.27"
tokio = { version = "1.37.0", features = ["full"] }
# openssl = { version = "0.10", features = ["vendored"] }
# ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
common-path = "1.0.0"

[features]
default = []
socket-can = ["canzero-server/socket-can"]
